force-app/main/default/objects/Credit_Memo_Line__c/fields/Credit_Memo_Line__c.object-meta.xml
<CustomObject>
  <label>Credit Memo Line</label>
  <pluralLabel>Credit Memo Lines</pluralLabel>
  <nameField>
    <type>Text</type>
    <label>Name</label>
  </nameField>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>