force-app/main/default/objects/Credit_Memo_Line__c/fields/Amount__c.field-meta.xml
<CustomField>
  <fullName>Amount__c</fullName>
  <label>Amount</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
  <formula>ROUND( ROUND(Unit_Price__c, 2) * Quantity__c, 2 )</formula>
</CustomField>