force-app/main/default/objects/Credit_Memo_Line__c/fields/Credit_Memo__c.field-meta.xml
<CustomField>
  <fullName>Credit_Memo__c</fullName>
  <label>Credit Memo</label>
  <type>MasterDetail</type>
  <referenceTo>Credit_Memo__c</referenceTo>
  <relationshipName>Credit_Memo_Lines</relationshipName>
  <relationshipLabel>Credit Memo Lines</relationshipLabel>
</CustomField>