force-app/main/default/objects/Credit_Memo_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Credit Memo Lines</relationshipLabel>
    <relationshipName>Product_Credit_Memo_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>