force-app/main/default/objects/Credit_Memo_Line__c/fields/Quantity__c.field-meta.xml
<CustomField>
  <fullName>Quantity__c</fullName>
  <label>Quantity</label>
  <type>Number</type>
  <precision>16</precision>
  <scale>2</scale>
</CustomField>